--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -7,6 +7,12 @@
     0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
+.main {
+  position: relative;
+  z-index: 2;
+  border-top: 1px solid #e6e6e6;
+}
+
 .toggle-all {
   width: 1px;
   height: 1px;
