--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -68,3 +68,13 @@ html .clear-completed:active {
 .info a:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 430px) {
+	.footer {
+		height: 50px;
+	}
+
+	.filters {
+		bottom: 10px;
+	}
+}
