--- a/src/components/Task/task.css
+++ b/src/components/Task/task.css
@@ -21,34 +21,44 @@
   padding: 15px 85px 15px 60px;
 }
 
+.todo-list li .view {
+	position: relative;
+}
+
 .todo-list li label .created {
   font-size: 13px;
   color: gray;
 }
 
 .todo-list li label .description {
-  word-break: break-all;
-  display: block;
-  line-height: 1.2;
-  transition: color 0.4s;
-  font-weight: 400;
-  color: #4d4d4d;
+  font-size: 13px;
+	color: gray;
 }
 
-.todo-list li.completed label .description {
+.todo-list li label .title {
+	word-break: break-all;
+	display: block;
+	line-height: 1.2;
+	transition: color 0.4s;
+	font-weight: 400;
+	color: #4d4d4d;
+}
+
+.todo-list li.completed label .title {
   color: #cdcdcd;
   text-decoration: line-through;
 }
 
 .todo-list li .icon {
-  position: absolute;
-  top: 0;
-  bottom: -3px;
   width: 30px;
   height: 40px;
   font-size: 34px;
   color: #cc9a9a;
-  margin: auto 0 11px;
+  margin: auto 0;
   transition: color 0.2s ease-out;
   cursor: pointer;
+}
+
+.todo-list li .edit {
+	display: none;
 }
