--- a/src/components/Task/task.css
+++ b/src/components/Task/task.css
@@ -25,14 +25,17 @@
 	position: relative;
 }
 
+.todo-list li label .description,
 .todo-list li label .created {
   font-size: 13px;
-  color: gray;
+	color: gray;
 }
 
 .todo-list li label .description {
-  font-size: 13px;
-	color: gray;
+  display: flex;
+  width: 40px;
+  flex-direction: column;
+  align-items: end;
 }
 
 .todo-list li label .title {
